test/Fail/Issue3538-2-record.err
Issue3538-2-record.agda:19.13-16: error: [RewriteAmbiguousRules]
Global confluence check failed: unD (c ((_ : Nat) → Nat)) can be
rewritten to either (_ : Nat) → Nat or Nat → Bool.
Possible fix: add a rewrite rule with left-hand side
unD (c ((_ : Nat) → Nat)) to resolve the ambiguity.
when checking confluence of the rewrite rule
Issue3538-2-record.R.unD-clause1 with rew
